--- a/index.html
+++ b/index.html
@@ -24,6 +24,11 @@
 <body>
     <div class="container">
 
+        
+        <div id="compass">
+  <div id="arrow"></div>
+</div>
+        
 
         <!-- Navigation -->
         <nav class="row navbar" role="navigation">
